ENH: add vimrc configuration plugin

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "contrib/bash-git-prompt"]
 	path = contrib/bash-git-prompt
 	url = https://github.com/magicmonty/bash-git-prompt.git
+[submodule "contrib/vimrc"]
+	path = contrib/vimrc
+	url = https://github.com/amix/vimrc.git
